--- a/final project/style.css
+++ b/final project/style.css
@@ -4,50 +4,150 @@
     box-sizing: border-box;
     
 }
-.header{
-    height: 60px;
+.slogan{
+    position: relative;
+    font-family: sans-serif;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 30px;
+    letter-spacing: 4px;
+    overflow: hidden;
+    background: linear-gradient(90deg, #000, #fff, #000);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    animation: animate 5s linear infinite;
 }
-.icon-razer:hover {
+@keyframes animate {
+    0%{
+        background-position: -500%;
+    }
+    100%{
+        background-position: 500%;
+    }
+    
+}
+.social{
+    display: flex;
+    justify-content: center;
+}
+.social > ul{
+    position: relative;
+    margin: 0px;
+    padding: 0px;
+}
+.social > ul > li{
+    position: relative;
+    list-style: none;
+    width: 60px;
+    height: 60px;
+    margin: 0px 30px;
+    transform: rotate(-30deg) skew(30deg);
+    background: #ccc;
+}
+.social > ul > li > a > span{
+    position: absolute;
+    top: 0px;left: 0px;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 30px ;
+}
+.social > ul > li:hover > a > span:nth-child(5){
+    transform: translate(40px,-40px);
+    opacity: 1;
+}
+.social > ul > li:hover > a > span:nth-child(4){
+    transform: translate(30px,-30px);
+    opacity: .8;
+}
+.social > ul > li:hover > a > span:nth-child(3){
+    transform: translate(20px,-20px);
+    opacity: .6;
+}
+.social > ul > li:hover > a > span:nth-child(2){
+    transform: translate(10px,-10px);
+    opacity: .4;
+}
+.social > ul > li:hover > a > span:nth-child(1){
+    transform: translate(0,0);
+    opacity: .2;
+}
+
+.icon:hover{
     transform: rotate(360deg);
     transition: 3s;
+}
+.header{
+    height: 60px;
+    background: linear-gradient(90deg,rgb(228, 224, 224), rgb(228, 224, 224), rgb(228, 224, 224),#000,#000);
+}
+
+.myMenu > li{
+  margin: 0 10px;
+  transition: 0.5s;
+}
+.myMenu > li > a{
+    display: block;
+    position: relative;
+    padding: 5px;
+    font-size: 18px;
+    text-transform: uppercase;
+    transition: 0.5s;
+}
+.myMenu:hover > li > a{
+    transform: scale(1.5);
+    opacity: .2;
+    filter: blur(5px);
+}
+.myMenu > li > a:hover{
+    transform: scale(2);
+    opacity: 1;
+    filter: blur(0);
+    text-decoration: none;
+    color: white;
+}
+.myMenu > li > a:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(243, 236, 236);
+    transition: 0.5s;
+    opacity:0.2;
 }
 .subMenu{
     position: relative;
 }
 .subMenu1{
     position: absolute;
-    top: 30px;
-    left: -50px;
+    top: 50px;
+    left: 0px;
     display: none;
-    border-radius: 3px;
-    z-index: 1;
-    background-color: rgb(216, 211, 211);
-    
+    background-color: rgb(252, 248, 248);
+    border-radius: 10px;
+    transition: 0.3s;
 }
-.subMenu:hover > .subMenu1{
+.subMenu:hover  .subMenu1{
     display: block;
-    top: 40px;
-    left: 0px; 
-}
-ul{ 
-    text-transform: uppercase;
-}
-
-.menuItem:hover {
-    background-color: rgb(216, 211, 211);
-    
+    transform: scale(1.2);
+    transition: 1s;
 }
 .ssubMenu{
     position: relative;
 }
 .ssubMenu1{
     position: absolute;
+    background-color: rgb(252, 248, 248);
     top: 0px;
     left: 100%;
-    background-color: rgb(216, 211, 211);
-    border-radius: 3px;
     display: none;
-   
 }
 .ssubMenu:hover .ssubMenu1{
     display: block;
