update icon social

--- a/final project/style.css
+++ b/final project/style.css
@@ -152,3 +152,47 @@
 .ssubMenu:hover .ssubMenu1{
     display: block;
 }
+.container{
+    position: relative;
+}
+.container .cart {
+    position: relative;
+    width: 300px;
+    height: 450px;
+    background: #232323;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.container .cart:before{
+    content: '';
+    position: absolute;
+    top: 0;left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ccc;
+    clip-path: circle(150px at 80% 20%);
+    transition: 0.5s ease-in-out;
+}
+.container .cart:hover:before{
+    clip-path: circle(300px at 80% -20%);
+}
+.container .cart:after{
+    content: 'Corsair';
+    position: absolute;
+    top: 10%;left: 0;
+    font-size: 100px;
+    font-family: italic;
+}
+.cart img{
+    position: absolute;
+    top: 50%;
+    transform:translateY(-50%);
+    z-index: 10;
+    width: 100%;
+    height: 200px;
+    transition: 0.5;
+}
+.cart:hover img{
+    top: 0%;
+    transform: translateY(0%);
+}
