--- a/final project/style.css
+++ b/final project/style.css
@@ -169,20 +169,49 @@
 .search{
     margin-left: auto;
 }
-.form{
-    margin-left: 350px;
+.btnSignin {
+    position: absolute;
+    top: 50%;left: 50%;
+    transform: translate(-50%,-50%);
+    width: 90px;
+    height: 30px;
+    color: #fff;
+    font-size: 18px;
+    text-transform: uppercase;
+    text-decoration: none;
+    background:linear-gradient(90deg, #000, #fff);
+    border-radius: 20px;
 }
-.spCart{
+.btnSignin:hover{
+    animation: animatee 8s linear infinite;
+    text-decoration: none;
+}
+@keyframes animatee{
+    0%{
+        background-position: 0%;
+    }
+    100%{
+        background-position: 400%;
+    }
+}
+.btnSignin:before{
+    content: '';
+    position: absolute;
+    top: -5px;left: -5px;right: -5px;bottom: -5px;
+    z-index: -1;
+    background:linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b,#03a9f4 );
+    background-size: 400%;
+    border-radius:40px;
+    filter: blur(20px);
+    opacity: 0;
+    transition: 0.5s;
+}
+.btnSignin:hover:before{
+    filter: blur(20px);
+    opacity: 1;
+    animation: animatee 8s linear infinite;
+}
+.formSignin{
+    display: block;
     margin-left: 100px;
-}
-.mySlide{
-    height: 390px;
-    border: black 3px solid;
-}
-.myBanner {
-    height: 390px;
-}
-.banner {
-    width: 100%;
-    height: 120px;
 }
