--- a/final project/style.css
+++ b/final project/style.css
@@ -1,31 +1,35 @@
-*{
-    padding: 0; margin: 0;
-    font-family: segoe ui ;
-    box-sizing: border-box;
-    
+*{margin: 0;padding: 0;box-sizing: border-box;}
+.mainmenu a, .navbar-default .navbar-nav > li > a, .mainmenu ul li a , .navbar-expand-lg .navbar-nav .nav-link{
+    color:#fff;
+    font-size:20px;
+    text-transform:uppercase;
+    padding:10px 10px;font-family:'Roboto',sans-serif;
+    display: block !important;
 }
-/* slogan animation*/
-.slogan{
-    position: relative;
-    font-family: sans-serif;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 30px;
-    letter-spacing: 4px;
-    overflow: hidden;
-    background: linear-gradient(90deg, #000, #fff, #000);
-    background-repeat: no-repeat;
-    background-size: 80%;
-    animation: animate 5s linear infinite;
+.mainmenu .active a,.mainmenu .active a:focus,.mainmenu .active a,.mainmenu li a,.mainmenu li a:focus ,.navbar-default .navbar-nav>.show>a, .navbar-default .navbar-nav>.show>a:focus, .navbar-default .navbar-nav>.show>a:hover{
+    background: #383737;
+    outline: 0;
+    text-decoration: none;
 }
-@keyframes animate {
-    0%{
-        background-position: -500%;
-    }
-    100%{
-        background-position: 500%;
-    }
-    
+.mainmenu .collapse ul > li > a{
+    background: #383737;
+    text-decoration: none;
+}
+.mainmenu .collapse ul ul > li > a, .navbar-default .navbar-nav .show .dropdown-menu > li > a:focus, .navbar-default .navbar-nav .show .dropdown-menu > li > a:hover{
+    background: #383737;
+    text-decoration: none;
+}
+.mainmenu .collapse ul ul ul > li > a{
+    background: #383737;
+    text-decoration: none;
+}
+.mainmenu{
+    background: none;
+    border: 0 solid;
+    margin: 0;padding: 0;
+    min-height:20px;
+    width: 100%;
+    background: #383737;
 }
 .icon{
     position: relative;
@@ -41,338 +45,201 @@
 }
 .myIcon:hover .brand{
     display: block;
-    top: 15px;
-    left: 70px;
+    top: 35px;
+    left: 90px;
 }
-/* Social animation*/
-.social{
-    display: flex;
-    justify-content: center;
-}
-.social > ul{
-    position: relative;
-    margin: 0px;
-    padding: 0px;
-}
-.social > ul > li{
-    position: relative;
+.myMenu{
     list-style: none;
-    width: 60px;
-    height: 60px;
-    margin: 0px 30px;
-    transform: rotate(-30deg) skew(30deg);
-    background: #ccc;
 }
-.social > ul > li > a > span{
-    position: absolute;
-    top: 0px;left: 0px;
+.myMenu li{
+    text-align: center;
+    display: block;
+    border-bottom:1px solid rgba(0,0,0,.2);
+} 
+.myMenu li a .iconn{
+    font-size: 30px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    background: #383737;
+    overflow: hidden;
+    margin: 0 auto 10px;
+}
+.myMenu li a .iconn .fa{
     width: 100%;
     height: 100%;
-    background: #000;
+    line-height: 40px;
+    font-size: 34px;
     transition: 0.5s;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: #fff;
-    font-size: 30px ;
+} 
+.myMenu li a:hover .iconn .fa{
+    transform: translateY(-100%);
 }
-.social > ul > li:hover > a > span:nth-child(5){
-    transform: translate(40px,-40px);
-    opacity: 1;
+.myMenu li a .iconn .fa:last-child{
+    color: rgb(8, 173, 8);
 }
-.social > ul > li:hover > a > span:nth-child(4){
-    transform: translate(30px,-30px);
-    opacity: .8;
-}
-.social > ul > li:hover > a > span:nth-child(3){
-    transform: translate(20px,-20px);
-    opacity: .6;
-}
-.social > ul > li:hover > a > span:nth-child(2){
-    transform: translate(10px,-10px);
-    opacity: .4;
-}
-.social > ul > li:hover > a > span:nth-child(1){
-    transform: translate(0,0);
-    opacity: .2;
-}
-.header{
-    height: 60px;
-    background: linear-gradient(90deg,rgb(228, 224, 224), rgb(228, 224, 224), rgb(228, 224, 224),#000,#000);
-}
-
-
-@media screen and (min-width:769px){
- 
-    .myMenu > li{
-        margin: 0 10px;
-        transition: 0.5s;
-      }
-      .myMenu > li > a{
-          display: block;
-          position: relative;
-          padding: 5px;
-          font-size: 18px;
-          text-transform: uppercase;
-          transition: 0.5s;
-      }
-      .myMenu:hover > li > a{
-          transform: scale(1.5);
-          opacity: .2;
-          filter: blur(5px);
-      }
-      .myMenu > li > a:hover{
-          transform: scale(2);
-          opacity: 1;
-          filter: blur(0);
-          text-decoration: none;
-          color: white;
-      }
-      .myMenu > li > a:before{
-          content: '';
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: rgb(243, 236, 236);
-          transition: 0.5s;
-          opacity:0.2;
-      }
-}
-/* Multi-level menu*/
-.subMenu{
+.myMenu li a .name{
     position: relative;
-}
-.subMenu1{
-    position: absolute;
-    top: 20px;
-    left: 80px;
-    display: none;
-    background-color: rgb(252, 248, 248);
-    border-radius: 10px;
-    transition: 0.3s;
-}
-.subMenu:hover  .subMenu1{
-    display: block;
-    transform: scale(1.2);
-    transition: 1s;
-    z-index: 10;
-}
-.ssubMenu{
-    position: relative;
-}
-.ssubMenu1{
-    position: absolute;
-    background-color: rgb(252, 248, 248);
-    top: 0px;
-    left: 100%;
-    display: none;
-}
-.ssubMenu:hover .ssubMenu1{
-    display: block;
-    z-index: 10000;
-}
-.search{
-    margin-left: auto;
-}
-/* button animation */
-.btnSignin {
-    position: absolute;
-    transform: translate(-50%,-50%);
-    width: 90px;
-    height: 30px;
-    color: #fff;
-    font-size: 18px;
-    text-transform: uppercase;
-    text-decoration: none;
-    background:linear-gradient(90deg, #000, #fff);
-    border-radius: 20px;
-}
-.btnSignin:hover{
-    animation: animatee 8s linear infinite;
-    text-decoration: none;
-}
-@keyframes animatee{
-    0%{
-        background-position: 0%;
-    }
-    100%{
-        background-position: 400%;
-    }
-}
-.btnSignin:before{
-    content: '';
-    position: absolute;
-    top: -5px;left: -5px;right: -5px;bottom: -5px;
-    z-index: -1;
-    background:linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b,#03a9f4 );
-    background-size: 400%;
-    border-radius:40px;
-    filter: blur(20px);
-    opacity: 0;
-    transition: 0.5s;
-}
-.btnSignin:hover:before{
-    filter: blur(20px);
-    opacity: 1;
-    animation: animatee 8s linear infinite;
-}
-.formSignin{
-    margin-left: 500px;
-}
-/* text animation */
-.mainTitle{
-    position: relative;
-    margin-bottom: 50px;
-}
-h1.title{
-    text-transform: uppercase;
-    font-size: 50px;
-}
-h1.title:before{
-    content: attr(data-text);
-    position: absolute;
-    top: 0;left:0;
-    transform-origin: bottom;
-    transform: rotateX(180deg);
-    line-height: .97;
-    background: linear-gradient(0deg, #000 0 , transparent 80%);
-    -webkit-background-clip: text;
-    color: transparent;
-    opacity: 0.1;
-}
-/* card */
-.product{
-    position: relative;
-}
-.product .card{
-    position: relative;
+    height: 20px;
     width: 100%;
-    height: 450px;
-    background:#232323;
-    border-radius: 20px;
+    display: block;
     overflow: hidden;
 }
-.product .card:before{
-    content: '';
+.myMenu li a .name span{
+    display: block;
+    position: relative;
+    color: #fff;
+    font-size: 18px;
+    line-height: 20px;
+    transition: 0.5s;
+}
+.myMenu li a .name span:before{
+    content:attr(data-text);
     position: absolute;
-    top: 0px;left: 0px;
+    top: -100%;
+    left: 0;
     width: 100%;
     height: 100%;
-    background: red;
-    clip-path: circle(150px at 80% 20%);
-    transition: 0.5s ease-in-out;
+    color: rgb(8, 173, 8);
 }
-.product .card:hover:before{
-    clip-path: circle(300px at 80% -20%);
+.myMenu li a:hover .name span{
+    transform: translateY(20px);
 }
-.product .card:after{
-    content: 'Corsair';
-    position: absolute;
-    top: 30%;left: -20%;
-    font-size: 120px;
-    color: rgba(255, 255, 255, 0.04);
-    font-weight: 800;
-    font-family: italic;
-}
-.product .card .imgPd{
-    position: absolute;
-    top: 30%;
-    transform: translateY(-50%);
-    z-index: 10;
-    width: 100%;
-    height: 220px;
-    transition: 0.5s;
-}
-.product .card:hover .imgPd{
-    top: -10%;
-    transform: translateY(0%);
-}
-.product .card:hover .imgPd > img{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%) rotate(-25deg);
-    width: 270px;
-}
-.product .card .contentPd{
-    position: absolute;
-    bottom: 0px;
-    width: 100%;
-    height: 100px;
-    text-align: center;
-    color: red;
-    transition: 1s;
-    z-index: 10;
-}
-.product .card:hover .contentPd{
-    height: 210px;
-}
-.product .card .contentPd > h2{
+.slogan{
     position: relative;
-    color: white;
-}
-.product .card .contentPd .switch, .product .card .contentPd .color{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 20px;
-    transition: 0.5s;
-}
-.product .card .contentPd .switch h3,.product .card .contentPd .color h3{
-    color: #fff;
-    font-size: 20px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-right: 10px;
-}
-.product .card .contentPd .switch > span{
-    width: 26px;
-    height: 26px;
     text-align: center;
-    line-height: 26px;
-    font-size: 14px;
-    display: inline-block;
-    color: #111;
-    background: #fff;
-    margin: 0 5px;
-    transition: 0.5s;
-    color: #111;
-    border-radius: 5px;
-    cursor: pointer;
+    color: #fff;
+    text-transform: capitalize;
+    overflow: hidden;
+    background: linear-gradient(90deg, #000, #fff, #000);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    animation: animate 5s linear infinite;
 }
-.product .card .contentPd .switch > span:hover{
-    background: red;
+.slogan h3{
+    font-size: 10px;
+    font-family: segoe ui light;
 }
-.product .card .contentPd .color > span{
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    background: #ff0;
-    margin: 0 5px;
-    cursor: pointer;
+@keyframes animate {
+    0%{
+        background-position: -500%;
+    }
+    100%{
+        background-position: 500%;
+    }
+    
 }
-.product .card .contentPd .color > span:nth-child(2){
-    background: #fff;
-}
-.product .card .contentPd .color > span:nth-child(3){
-    background: #000;
-}
-.product .card .contentPd a{
-    display: inline-block;
-    padding: 10px 20px;
-    background: #fff;
-    margin-top: 10px;
-    text-decoration: none;
-    font-weight: 600;
-    color: #000;
-    transform: translateY(50px);
-    transition: 0.5s;
-    opacity: 0;
-}
-.product .card:hover .contentPd a{
-    opacity: 1;
-    transform: translateY(0px);
-    transition-delay: 0.75s;
+.slide{
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 300px;
+    }
+    .slide li {
+        list-style: none;
+        position: relative;
+        width: 20%;
+        height: 100%;
+        border-right: 1px solid green;
+        float: left;
+        box-sizing: border-box;
+        text-align: center;
+        transition: 0.5s ease-in-out;
+        overflow: hidden;
+    }
+    .slide li:nth-child(1){
+        background-image:url('img/slide1.jpg');
+        background-size: cover;
+        background-position: left;
+        
+    }
+    .slide li:nth-child(2){
+        background-image:url('img/slide2.jpg');
+        background-size: cover;
+        background-position: left;
+    }
+    .slide li:nth-child(3){
+        background-image:url('img/slide3.jpg');
+        background-size: cover;
+        background-position: left;
+    }
+    .slide li:nth-child(4){
+        background-image:url('img/slide4.jpg');
+        background-size: cover;
+        background-position: left;
+    }
+    .slide li:nth-child(5){
+        background-image:url('img/slide5.jpg');
+        background-size: cover;
+        background-position: left;
+    }
+    .slide:hover li{
+        width: 10%;
+    }
+    .slide li:hover{
+        width: 60%;
+        background-size: 100% 100%;
+    }
+    .slide li .contentImg{
+        position: absolute;
+        bottom: -1000%;
+        left: 0;
+        width: 100%;
+        background: transparent;
+        color: #fff;
+        box-sizing: border-box;
+    }
+    .slide li .contentImg h2{
+        color: rgb(158, 153, 153);
+    }
+    .slide li .contentImg h2, p{
+        font-size: 20px;
+        font-family: segoe ui light;
+    }
+    .slide li .contentImg a{
+        text-decoration: none;
+        color: #fff;
+    }
+    .slide li .contentImg a span{
+        color:rgb(8, 173, 8) ;
+    }
+    .slide li:hover .contentImg{
+        bottom: 170px;
+        transition: 0.5s;
+        transition-delay: 0.5s;
+    }
+@media only screen and (min-width: 767px) {
+    .slogan h3{
+        font-size: 30px;
+        color: rgb(109, 104, 104);
+    }
+    .slide{
+        height: 600px;
+    }
+    .slide li:hover .contentImg{
+        bottom: 450px;
+        
+    }
+    .slide li .contentImg h2, p{
+        font-family: segoe ui light;
+        font-size: 30px;
+    }
+    .myMenu{
+        display: flex;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        margin: 0;
+        padding: 20px 0;
+    }
+    .myMenu li {
+        text-align: center;
+        display: block;
+        padding: 0 50px;
+        border-right: 1px solid rgba(0,0,0,.2);
+        border-bottom: none;
+    }
 }
