--- a/final project/style.css
+++ b/final project/style.css
@@ -5,6 +5,7 @@
     text-transform:uppercase;
     padding:10px 10px;font-family:'Roboto',sans-serif;
     display: block !important;
+    
 }
 .mainmenu .active a,.mainmenu .active a:focus,.mainmenu .active a,.mainmenu li a,.mainmenu li a:focus ,.navbar-default .navbar-nav>.show>a, .navbar-default .navbar-nav>.show>a:focus, .navbar-default .navbar-nav>.show>a:hover{
     background: #383737;
@@ -34,19 +35,9 @@
 .icon{
     position: relative;
 }
-.brand {
-    position: absolute;
-    display: none;
-    transition: 2s;
-}
 .icon:hover{
     transform: rotate(360deg);
     transition: 3s;
-}
-.myIcon:hover .brand{
-    display: block;
-    top: 35px;
-    left: 90px;
 }
 .myMenu{
     list-style: none;
@@ -136,6 +127,8 @@
         left: 0;
         width: 100%;
         height: 300px;
+        border: 1px solid rgb(8, 173, 8);
+        overflow: hidden;
     }
     .slide li {
         list-style: none;
@@ -210,10 +203,99 @@
         transition: 0.5s;
         transition-delay: 0.5s;
     }
+    .slogan1{
+        position: relative;
+        width: 100%;
+        text-align: center;
+        background: linear-gradient(0deg, #000,#262626);
+    }
+    .slogan1:before{
+        content: '';
+        position: absolute;
+        top: -2px;left: -2px;
+        width: calc(100% + 4px);
+        height: calc(100% + 4px);
+        background: linear-gradient(45deg,#fb0094,#0000ff,#00ff00,#ffff00,#ff0000,#fb0094,#0000ff,#00ff00,#ffff00,#ff0000 );
+        background-size: 400%;
+        z-index: -1;
+        animation: animate1 20s linear infinite;
+    }
+    @keyframes animate1{
+        0%{
+            background-position: 0 0;
+        }
+        50%{
+            background-position: 400% 0;
+        }
+        100%{
+            background-position: 0 0;
+        }
+    }
+    .slogan1 h3 {
+        text-transform: capitalize;
+        font-size: 10px;
+        font-family: segoe ui light;
+        color: rgb(109, 104, 104);
+    }
+    .banner{
+        position: relative;
+        width: 100%;
+        height: 600px;
+        background-image: url('img/bg-home.jpg');
+        background-size: cover;
+        background-position: 100% 100%;
+        background-position: bottom;
+    }
+    .banner .cloud{
+        position: absolute;
+        top: 0;left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    .banner .cloud img{
+        position: absolute;
+        bottom: 0;
+        max-width: 100%;
+        animation: animate2 calc(8s * var(--i)) linear infinite;
+    }
+    @keyframes animate2{
+        0%{
+            transform: translateX(-100%);
+        }
+        100%{
+            transform: translateX(100%);
+        }
+    }
+    .contentBanner{
+        position: relative;
+        top: 5%;
+        left: 0;
+    }
+    .contentBanner h3{
+        color: #fff;
+        font-family: segoe ui light;
+        text-transform: capitalize;
+        text-align: center;
+    }
+    .contentBanner p{
+        color: #fff;
+        text-align: center;
+    }
 @media only screen and (min-width: 767px) {
     .slogan h3{
         font-size: 30px;
         color: rgb(109, 104, 104);
+    }
+    .slogan1 h3 {
+        font-size: 30px;
+        font-family: segoe ui light;
+    }
+    .banner{
+        height: 800px;
+        background: url('img/bg-home1.jpg');
+        background-size: cover;
+        background-position: 100% 100%;
     }
     .slide{
         height: 600px;
