--- a/final project/style.css
+++ b/final project/style.css
@@ -263,7 +263,9 @@ table {
         color: #fff;
         cursor: pointer;
     }
-
+    .slogan{
+        margin-top: 89px;
+    }
     .banner{
         position: relative;
         width: 100%;
@@ -324,7 +326,74 @@ footer{
     height: 200px;
     background: linear-gradient(0deg, #000,#262626);
 }
-@media only screen and (min-width: 767px) {
+.social  ul{
+    display: flex;
+    justify-content: center;
+    height: 200px;
+    width: 100%;
+    align-items: center;
+    
+}
+.social > ul > li{
+    position: relative;
+    list-style: none;
+    width: 60px;
+    height: 60px;
+    margin: 0px 30px;
+    transform: rotate(-30deg) skew(30deg);
+    background: #ccc;
+    
+}
+.social > ul > li > a > span{
+    position: absolute;
+    top: 0px;left: 0px;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 30px ;
+}
+.social > ul > li:hover > a > span:nth-child(5){
+    transform: translate(40px,-40px);
+    opacity: 1;
+}
+.social > ul > li:hover > a > span:nth-child(4){
+    transform: translate(30px,-30px);
+    opacity: .8;
+}
+.social > ul > li:hover > a > span:nth-child(3){
+    transform: translate(20px,-20px);
+    opacity: .6;
+}
+.social > ul > li:hover > a > span:nth-child(2){
+    transform: translate(10px,-10px);
+    opacity: .4;
+}
+.social > ul > li:hover > a > span:nth-child(1){
+    transform: translate(0,0);
+    opacity: .2;
+}
+.social ul li:nth-child(1) span{
+    background: #3b5999; 
+}
+.social ul li:nth-child(2) span{
+    background: #55acee; 
+}
+.social ul li:nth-child(3) span{
+    background: #dd4b39; 
+}
+.social ul li:nth-child(4) span{
+    background: #0077b5; 
+}
+.social ul li:nth-child(5) span{
+    background: #e4405f; 
+}
+
+@media only screen and (min-width: 769px) {
     .banner h3{
         font-size: 30px;
         color: rgb(158, 153, 153);
@@ -332,6 +401,9 @@ footer{
     .slogan1 h3 {
         font-size: 30px;
         font-family: segoe ui light;
+    }
+    .slogan{
+        margin-top: 132px;
     }
     .banner{
         height: 800px;
