--- a/style.css
+++ b/style.css
@@ -1,16 +1,264 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700&subset=latin-ext');
+*{margin: 0;padding: 0; box-sizing: border-box;}
 body{
-    background-image: url('bg.jpg');
+    font-family: 'Quicksand', sans-serif;
+    color: #324e63;
+    background-image: linear-gradient(-20deg, #ff2846 0%, #6944ff 100%);
 }
-.information{
-    width: 960px;
-    height: auto;
-    margin: 0 auto;
-    color: white;
-    font-family: consolas;
+.myCv{
+    position: relative;
+    width: 100%;
+    background: #fff;
+    border-radius: 20px;
+    margin-top: 100px;
 }
-.information .box {
-    display: flex;
-    justify-content: space-around;
-    
+.imgCv img{
+    position: absolute;
+    top: -90px;
+    width:200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 5px solid rgb(223, 16, 205);
+}
+.info{
+    margin-top: 120px;
+}
+.box {
+    margin-top: 30px;
+    color: #324e63;
     text-align: center;
+    font-family: 'Quicksand', sans-serif;
+}
+.content .box .icon .fa {
+    font-size: 50px;
+    cursor: pointer;
+}
+.content .box .icon > h3, .content .box .icon > h4{
+    position: relative;
+    overflow: hidden;
+    font-weight: 400;
+    margin: 0;
+    padding: 2px 5px;
+    font-size: 24px;
+    color: transparent;
+}
+.content .box .icon h3:before, 
+.content .box .icon h4:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    background: rgb(223, 16, 205);
+    transition: 1s;
+}
+
+.content .box .icon h4:before{
+    left: initial;
+    right: 100%;
+    background: #6944ff;
+}
+.content .box .fa:hover ~ h3:before
+{
+    left: -100%;
+
+}
+.content .box .fa:hover ~ h4:before{
+    left: initial;
+    right: -100%;
+}
+.content .box .fa:hover ~ h3,
+.content .box .fa:hover ~ h4{
+    color: #000;
+}
+.mySkill{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.skill .card {
+    position: relative;
+    width: 200px;
+    background: #324e63;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
+    text-align: center;
+    margin-top: 10px;
+    border-radius: 4px;
+    overflow: hidden;
+    transition: 0.5s;
+}
+.skill .card:hover {
+    transform: translateY(-10px);
+}
+.percent {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    box-shadow: inset 0 0 50px #000;
+    background: #324e63;
+    z-index: 10;
+}
+.percent .number {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+.percent .number h2 {
+    color: #777;
+    font-weight: 700;
+    font-size: 40px;
+    transition: 0.5s;
+}
+.percent .number h2 span {
+    font-size: 24px;
+    color: #777;
+}
+.card:hover .percent .number h2{
+    color: #fff;
+    font-size: 55px;
+}
+.card:hover .percent .number h2 span {
+    color: #fff;
+    transition: 0.5s;
+}
+.text{
+    position: relative;
+    margin-top: 20px;
+    color: #777;
+    font-weight: 700;
+    font-size: 18px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: 0.5s;
+}
+.card:hover .text {
+    color: #fff;
+}
+svg{
+    position: relative;
+    width: 150px;
+    height: 150px;
+    z-index: 10;
+}
+svg circle {
+    width: 100%;
+    height: 100%;
+    fill: none;
+    stroke: #191919;
+    stroke-width: 10;
+    stroke-linecap: round;
+    transform: translate(5px, 5px);
+}
+svg circle:nth-child(2){
+    stroke-dasharray: 440;
+    stroke-dashoffset: 440;
+}
+.card svg circle:nth-child(2){
+    stroke-dashoffset: calc(440 - (440 * 80) / 100);
+    stroke: #00ff43;
+}
+.card1 svg circle:nth-child(2){
+    stroke-dashoffset: calc(440 - (440 * 90) / 100);
+    stroke: #00a1ff;
+}
+.card2 svg circle:nth-child(2){
+    stroke-dashoffset: calc(440 - (440 * 70) / 100);
+    stroke: #ff04f7;
+}
+.profile{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 50px;
+}
+.profile .boxxx{
+    position: relative;
+    width: 500px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, .1);
+    border-radius: 4px;
+    text-align: center;
+    overflow: hidden;
+}
+.profile .boxxx .tittle{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    background:#00a1ff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin: 0 auto;
+    font-size: 40px;
+    font-weight: 700;
+    transition: 1s;
+}
+.profile .boxxx1 .tittle{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    background:rgb(223, 16, 205);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin: 0 auto;
+    font-size: 40px;
+    font-weight: 700;
+    transition: 1s;
+}
+.profile .boxxx2 .tittle{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    background:#00ff43;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    margin: 0 auto;
+    font-size: 40px;
+    font-weight: 700;
+    transition: 1s;
+}
+.profile .boxxx:hover .tittle {
+    box-shadow: 0 0 0 400px #00a1ff;
+}
+.profile .boxxx1:hover .tittle {
+    box-shadow: 0 0 0 400px rgb(223, 16, 205);
+}
+.profile .boxxx2:hover .tittle {
+    box-shadow: 0 0 0 400px #00ff43;
+}
+.profile .boxxx:hover h3, .profile .boxxx:hover p, .profile .boxxx:hover a{
+    color: #fff;
+    transition: 0.4s;
+}
+.profile .boxxx .content{
+    position: relative;
+    z-index: 10;
+}
+@media screen and (min-width: 769px){
+    .box{
+        display: flex;
+        justify-content: space-around;
+    }
+    .skill{
+        display:flex;
+        padding-left: 20px;
+    }
 }
