--- a/final project/style.css
+++ b/final project/style.css
@@ -145,6 +145,23 @@ table {
 .myMenu li a:hover .name span{
     transform: translateY(20px);
 }
+.dropdown:hover>.dropdown-menu{
+    display: block;
+}
+.dropdown-menu{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    background: #383737;
+    margin: 0;
+    transition: 1s;
+}
+.dropdown-menu .dropdown-item:hover{
+    color:rgb(8, 173, 8) ;
+    background: none;
+    transition: 1s;
+}
 .slide{
         position: relative;
         top: 0;
@@ -394,6 +411,13 @@ footer{
 }
 
 @media only screen and (min-width: 769px) {
+    .dropdown-menu{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 220px;
+        height: auto;
+    }
     .banner h3{
         font-size: 30px;
         color: rgb(158, 153, 153);
@@ -403,7 +427,7 @@ footer{
         font-family: segoe ui light;
     }
     .slogan{
-        margin-top: 132px;
+        margin-top: 92px;
     }
     .banner{
         height: 800px;
@@ -432,7 +456,6 @@ footer{
         display: flex;
         width: 100%;
         align-items: center;
-        padding: 20px 0;
         justify-content: center;
     }
     .myMenu li {
